# Rust-PyO3-PySerial

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
examples/: test1.py  uwb.py
src/: lib.rs  main.rs
tests/: log.txt  test_serial.py  uwb.py
wheels/: uwb_serial-0.1.0-cp310-cp310-linux_x86_64.whl
