[package]
name = "pyrust"
version = "0.0.1"
authors = ["Seok Won <ikr@kakao.com>"]
edition = "2018"
license = "MIT"

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module"] }

[lib]
name = "rust_sort"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3