[package]
name = "uwb_serial"
version = "1.0.0"
edition = "2021"
authors = ["Seok Won (ikr@kakao.com)"]
description = "UWB serial connector"
license = "MIT"

[lib]
name = "uwb_serial"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
serialport = "4.2"

clap = "3.2.16"